tests/errors/enum-variant-typo/main.pa
enum color {
	red
	green
	blue
}

def main = color.gren
